[package]
name = "dao-lang"
version = "0.1.0"
edition = "2021"
authors = ["ttxs25830"]
description = "一门解释型，动态类型，弱类型的编程语言，献给我们的老师。"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
